# client-reg-wasm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yaml  envoy.yaml
clireg-grpc-service/: Cargo.toml  build.rs
clireg-grpc-service/src/: data.rs  server.rs
clireg-wasm-filter/: Cargo.toml  build.rs  docker-compose-perf.yaml  docker-compose.yaml  envoy-perf.yaml  envoy.yaml  nighthawk-perf.yaml  rustfmt.toml
clireg-wasm-filter/src/: auth.rs  cache.rs  conf.rs  grpc.rs  hash.rs  lib.rs
clireg-wasm-filter/src/cache/: hard_coded.rs  mock.rs  shared.rs
proto/: registry.proto
src/: auth.rs  cache.rs  conf.rs  grpc.rs  lib.rs
src/cache/: hard_coded.rs
src/grpc/: registry.rs
