[package]
name = "clireg-wasm"
version = "0.1.0"
description = "Proxy-Wasm plugin client registry"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
proxy-wasm = "0.2.1"
json= "0.12.4"
log = "0.4.17"
base64 = "0.20.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"