[package]
name = "clireg-grpc-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tonic = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic-reflection = "0.6.0"
sha2 = "0.10"
base64 = "0.20"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "registry-server"
path = "src/server.rs"