[package]
name = "clireg-wasm-filter"
version = "0.1.0"
description = "Proxy-Wasm plugin client registry"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
proxy-wasm = "0.2"
json= "0.12"
log = "0.4"
base64 = "0.20"
prost = "0.11"
sha2 = "0.10"
serde = "1.0"

[dev-dependencies]
hex-literal = "0.3"


[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"