[package]
name = "clireg-wasm-filter"
version = "0.1.0"
description = "Proxy-Wasm plugin client registry"
edition = "2021"
publish = false
repository = "git@git.ecd.axway.org:bbordigoni/clireg-wasm.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
proxy-wasm = "0.2"
json= "0.12"
log = "0.4"
base64 = "0.21"
prost = "0.11"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
http = "0.2"
querystring = "1.1"
http-auth-basic = "0.3"
jwt = "0.16"
auth-headers = "0.1"

[dev-dependencies]
hex-literal = "0.3"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
tonic-build = "0.8"